botton home fixed

--- a/html/capacitancia.html
+++ b/html/capacitancia.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-    <div class="container-fluid header">
+    <div class="container-fluid">
+        
         <!--Barra de navegacion-->
         <div class="row" id="header">
             <div class="col-1" id="home">
