--- a/html/leyOhm.html
+++ b/html/leyOhm.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <div class="container-fluid">
+      
       <div class="row" id="header">
         <div class="col-1" id="home">
           <a href="../index.html">
@@ -35,12 +36,12 @@
           <h2>CALCULADORA LEY DE OHM</h2>
         </div>
         <div class="col" id="accesos">
-          <a href=""
+          <a href="./capacitancia.html"
             ><button type="button" class="btn btn-outline-primary">
               Capacitancia
             </button></a
           >
-          <a href=""
+          <a href="./resistencia.html"
             ><button type="button" class="btn btn-outline-danger">
               Resistencia
             </button></a
