--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="card-header tarejtaHead" id="tarjh2">CALCULADORA CAPACITANCIA</div>
                 <div class="card-body text-primary">
                   <img src="img/capacitancia.png"  class="tarjimg">
-                  <a href=""><button type="button" class="btn btn-outline-primary">Iniciar</button></a>
+                  <a href="./html/capacitancia.html"><button type="button" class="btn btn-outline-primary">Iniciar</button></a>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <div class="card-header tarejtaHead" id="tarjh3">CALCULADORA DE RESISTENCIA</div>
                 <div class="card-body text-danger">
                   <img src="img/recistencia.png"  class="tarjimg">
-                  <a href=""><button type="button" class="btn btn-outline-danger">Iniciar</button></a>
+                  <a href="./html/resistencia.html"><button type="button" class="btn btn-outline-danger">Iniciar</button></a>
                 </div>
             </div>
         </div>
@@ -74,6 +74,11 @@
         </div>
 
 
+      </div>
+
+
+      <div class="row" id="footer">
+        
       </div>
     </div>
 
