--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   </head>
 
   <body>
-
     <div class="container-fluid" id="pag">
       <div class="row" id="header">
         <div class="col header">
@@ -33,52 +32,97 @@
       </div>
 
       <div class="row" id="cuerpo">
-        <div class="col">        
-            <div class="card border-secondary mb-3 tarjeta" style="max-width: 18rem;" id="tarj1">
-                <div class="card-header tarejtaHead" id="tarjh1">CALCULADORA LEY DE OHM</div>
-                <div class="card-body text-secondary">
-                  <img src="img/leyohm.png" class="tarjimg">
-                  <a href="html/leyOhm.html"><button type="button" class="btn btn-outline-secondary">Iniciar</button></a>
-                </div>
+        <div class="col">
+          <div
+            class="card border-secondary mb-3 tarjeta"
+            style="max-width: 18rem"
+            id="tarj1"
+          >
+            <div class="card-header tarejtaHead" id="tarjh1">
+              CALCULADORA LEY DE OHM
             </div>
+            <div class="card-body text-secondary">
+              <img src="img/leyohm.png" class="tarjimg" />
+              <a href="html/leyOhm.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  Iniciar
+                </button></a
+              >
+            </div>
+          </div>
         </div>
 
-        <div class="col">        
-            <div class="card border-primary mb-3 tarjeta" style="max-width: 18rem;" id="tarj2">
-                <div class="card-header tarejtaHead" id="tarjh2">CALCULADORA CAPACITANCIA</div>
-                <div class="card-body text-primary">
-                  <img src="img/capacitancia.png"  class="tarjimg">
-                  <a href="./html/capacitancia.html"><button type="button" class="btn btn-outline-primary">Iniciar</button></a>
-                </div>
+        <div class="col">
+          <div
+            class="card border-primary mb-3 tarjeta"
+            style="max-width: 18rem"
+            id="tarj2"
+          >
+            <div class="card-header tarejtaHead" id="tarjh2">
+              CALCULADORA CAPACITANCIA
             </div>
+            <div class="card-body text-primary">
+              <img src="img/capacitancia.png" class="tarjimg" />
+              <a href="./html/capacitancia.html"
+                ><button type="button" class="btn btn-outline-primary">
+                  Iniciar
+                </button></a
+              >
+            </div>
+          </div>
         </div>
 
-        <div class="col">        
-            <div class="card border-danger mb-3 tarjeta" style="max-width: 18rem;" id="tarj3">
-                <div class="card-header tarejtaHead" id="tarjh3">CALCULADORA DE RESISTENCIA</div>
-                <div class="card-body text-danger">
-                  <img src="img/recistencia.png"  class="tarjimg">
-                  <a href="./html/resistencia.html"><button type="button" class="btn btn-outline-danger">Iniciar</button></a>
-                </div>
+        <div class="col">
+          <div
+            class="card border-danger mb-3 tarjeta"
+            style="max-width: 18rem"
+            id="tarj3"
+          >
+            <div class="card-header tarejtaHead" id="tarjh3">
+              CALCULADORA DE RESISTENCIA
             </div>
+            <div class="card-body text-danger">
+              <img src="img/recistencia.png" class="tarjimg" />
+              <a href="./html/resistencia.html"
+                ><button type="button" class="btn btn-outline-danger">
+                  Iniciar
+                </button></a
+              >
+            </div>
+          </div>
         </div>
 
-        <div class="col">        
-            <div class="card border-success mb-3 tarjeta" style="max-width: 18rem;" id="tarj4">
-                <div class="card-header tarejtaHead" id="tarjh4">OTRAS</div>
-                <div class="card-body text-success">
-                  <img src="img/otras.png" class="tarjimg">
-                  <a href=""><button type="button" class="btn btn-outline-success">Iniciar</button></a>
-                </div>
+        <div class="col">
+          <div
+            class="card border-success mb-3 tarjeta"
+            style="max-width: 18rem"
+            id="tarj4"
+          >
+            <div class="card-header tarejtaHead" id="tarjh4">OTRAS</div>
+            <div class="card-body text-success">
+              <img src="img/otras.png" class="tarjimg" />
+              <a href=""
+                ><button type="button" class="btn btn-outline-success">
+                  Iniciar
+                </button></a
+              >
             </div>
+          </div>
         </div>
-
-
       </div>
 
-
       <div class="row" id="footer">
-        
+        <div class="row">
+          <h2>Autores:</h2>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <p>Andres David Elizalde Peralta: 01220371068</p>
+          </div>
+          <div class="col">
+            <p>Santiago Alexander Opsina Pabon: 01220371058</p>
+          </div>
+        </div>
       </div>
     </div>
 
