--- a/html/capacitancia.html
+++ b/html/capacitancia.html
@@ -1,141 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <!--Css propio-->
-    <link rel="stylesheet" href="../css/capacitancia.css">
+    <link rel="stylesheet" href="../css/capacitancia.css" />
     <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Capacitancia</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        
-        <!--Barra de navegacion-->
-        <div class="row" id="header">
-            <div class="col-1" id="home">
-                <a href="../index.html">
-                    <img src="../img/home.png">
-                </a>
-
-            </div>
-            <div class="col-8" id="tittle">
-                <h2>CALCULADORA CAPACITANCIA</h2>
-            </div>
-            <div class="col" id="accesos">
-                <a href="leyOhm.html"><button type="button" class="btn btn-outline-secondary">Ley de ohm</button></a>
-                <a href="resistencia.html"><button type="button" class="btn btn-outline-danger">Resistencia</button></a>
-                <a href=""><button type="button" class="btn btn-outline-success">Otros</button></a>
-            </div>
+      <!--Barra de navegacion-->
+      <div class="row" id="header">
+        <div class="col-1" id="home">
+          <a href="../index.html">
+            <img src="../img/home.png" />
+          </a>
         </div>
-        <!--Barra de navegacion-->
+        <div class="col-8" id="tittle">
+          <h2>CALCULADORA CAPACITANCIA</h2>
+        </div>
+        <div class="col" id="accesos">
+          <a href="leyOhm.html"
+            ><button type="button" class="btn btn-outline-secondary">
+              Ley de ohm
+            </button></a
+          >
+          <a href="resistencia.html"
+            ><button type="button" class="btn btn-outline-danger">
+              Resistencia
+            </button></a
+          >
+          <a href=""
+            ><button type="button" class="btn btn-outline-success">
+              Otros
+            </button></a
+          >
+        </div>
+      </div>
+      <!--Barra de navegacion-->
 
+      <div class="row">
+        <div class="col texto">
+          <p>
+            La capacitancia es la capacidad de un componente o circuito para
+            recoger y almacenar energía en forma de carga eléctrica. se expresa
+            como la relación entre la carga eléctrica de cada conductor y la
+            diferencia de potencial (es decir, tensión) entre ellos el valor de
+            la capacitancia de un capacitor se mide en faradios (F); denominados
+            así en honor al físico inglés Michael Faraday
+          </p>
+          <p>
+            Un condensador de placas paralelas tiene dos placas conductoras, con
+            la misma superficie, que actúan como electrodos. Una placa actúa
+            como electrodo positivo, mientras que la otra actúa como electrodo
+            negativo, cuando se aplica una diferencia de potencial al
+            condensador. Las dos placas están separadas por un espacio que se
+            rellena con un material dieléctrico. Esto significa que no conducen
+            la corriente y pueden mantener las cargas electrostáticas mientras
+            emiten una energía mínima, en forma de calor o corrientes de fuga.
+          </p>
+        </div>
+      </div>
+
+      <div class="row contenido">
+        <div class="col-1"></div>
+        <div class="col-4">
+          <img
+            src="../img/imgCondensadores.png"
+            alt="revisar codigo que algo puso mal"
+          />
+        </div>
+        <div class="col-2"></div>
+        <div class="col-4">
+          <div class="col-1"></div>
+          <table class="formulario">
+            <tr>
+              <td>
+                <label for="unidades">
+                  <h2>Unidades de medida</h2>
+                </label>
+              </td>
+
+              <td>
+                <select name="" id="unidades">
+                  <option value="0"></option>
+                  <option value="1">milimetros</option>
+                  <option value="2">metros</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="dielectrico">
+                  <h2>Dielectrico(E<sub>r</sub> ):</h2>
+                </label>
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="dielectrico"
+                />
+              </td>
+              <td>
+                <p class="separacionTablas"></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="Distancia">
+                  <h2>Distancia(d):</h2>
+                </label>
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="distancia"
+                />
+              </td>
+              <td>
+                <p id="pegarUnidades1" class="separacionTablas"></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="area">
+                  <h2>Area o superficie(s):</h2>
+                </label>
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="area"
+                />
+              </td>
+              <td>
+                <p id="pegarUnidades2" class="separacionTablas"></p>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <button
+                  class="btn btn-outline-primary"
+                  style="margin-top: 3em"
+                  id="calcularCapacitancia"
+                >
+                  Calcular capacitancia
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <img src="../img/formula-condensadores.png" class="formula" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="capacitancia">
+                  <h2>Capacitancia =</h2>
+                </label>
+              </td>
+              <td>
+                <p class="separacionTablas resultado" id="capacitancia"></p>
+              </td>
+              <td>
+                <p id="pegarUnidades3" class="separacionTablas"></p>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="row" id="footer">
         <div class="row">
-            <div class="col texto">
-                <p>La capacitancia es la capacidad de un componente o circuito para recoger y almacenar energía en forma
-                    de carga eléctrica. se expresa como la relación entre la carga eléctrica de cada conductor y la
-                    diferencia de potencial (es decir, tensión) entre ellos el valor de la capacitancia de un capacitor
-                    se mide en faradios (F); denominados así en honor al físico inglés Michael Faraday</p>
-                <p>Un condensador de placas paralelas tiene dos placas conductoras, con la misma superficie, que actúan
-                    como electrodos. Una placa actúa como electrodo positivo, mientras que la otra actúa como electrodo
-                    negativo, cuando se aplica una diferencia de potencial al condensador. Las dos placas están
-                    separadas por un espacio que se rellena con un material dieléctrico. Esto significa que no conducen
-                    la corriente y pueden mantener las cargas electrostáticas mientras emiten una energía mínima, en
-                    forma de calor o corrientes de fuga. </p>
-            </div>
+          <h2>Autores:</h2>
         </div>
-
-        <div class="row contenido">
-            <div class="col-1"></div>
-            <div class="col-4"><img src="../img/imgCondensadores.png" alt="revisar codigo que algo puso mal"></div>
-            <div class="col-2"></div>
-            <div class="col-4 ">
-                <div class="col-1"></div>
-                <table class="formulario">
-                    <tr>
-                        <td><label for="unidades">
-                                <h2>Unidades de medida</h2>
-                            </label></td>
-
-                        <td><select name="" id="unidades">
-                                <option value="0"></option>
-                                <option value="1">milimetros</option>
-                                <option value="2">metros</option>
-
-                            </select></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="dielectrico">
-                                <h2>Dielectrico(E<sub>r</sub> ):</h2>
-                            </label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="dielectrico"></td>
-                        <td>
-                            <p class="separacionTablas"></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="Distancia">
-                                <h2>Distancia(d):</h2>
-                            </label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="distancia"></td>
-                        <td>
-                            <p id="pegarUnidades1" class="separacionTablas"></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="area">
-                                <h2>Area o superficie(s): </h2>
-                            </label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="area"></td>
-                        <td>
-                            <p id="pegarUnidades2" class="separacionTablas"></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><button class="btn btn-outline-primary" style="margin-top: 3em;"
-                                id="calcularCapacitancia">Calcular capacitancia</button></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><img src="../img/formula-condensadores.png" class="formula"></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="capacitancia">
-                                <h2>Capacitancia =</h2>
-                            </label></td>
-                        <td>
-                            <p class="separacionTablas resultado" id="capacitancia"></p>
-                        </td>
-                        <td>
-                            <p id="pegarUnidades3" class="separacionTablas"></p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+        <div class="row">
+          <div class="col-3">
+            <p>Andres David Elizalde Peralta: 01220371068</p>
+          </div>
+          <div class="col">
+            <p>Santiago Alexander Opsina Pabon: 01220371058</p>
+          </div>
         </div>
+      </div>
 
-
-
-
-
-
+      
     </div>
     <!--Script propio-->
     <script src="../js/capacitancia.js"></script>
 
     <!--Script bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
