--- a/html/resistencia.html
+++ b/html/resistencia.html
@@ -1,110 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <!--Css propio-->
-    <link rel="stylesheet" href="../css/resistencia.css">
+    <link rel="stylesheet" href="../css/resistencia.css" />
     <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Resistencia</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid header">
-            <!--Barra de navegacion-->
-    <div class="row" id="header">
+      <!--Barra de navegacion-->
+      <div class="row" id="header">
         <div class="col-1" id="home">
-            <a href="../index.html" >
-                <img src="../img/home.png">
-            </a>
-            
+          <a href="../index.html">
+            <img src="../img/home.png" />
+          </a>
         </div>
         <div class="col-8" id="tittle">
-            <h2>CALCULADORA RESISTENCIAS</h2>
+          <h2>CALCULADORA RESISTENCIAS</h2>
         </div>
         <div class="col" id="accesos">
-            <a href="leyOhm.html"><button type="button" class="btn btn-outline-secondary">Ley de ohm</button></a>
-            <a href="capacitancia.html"><button type="button" class="btn btn-outline-primary">capacitancia</button></a>
-            <a href=""><button type="button" class="btn btn-outline-success">Otros</button></a>
+          <a href="leyOhm.html"
+            ><button type="button" class="btn btn-outline-secondary">
+              Ley de ohm
+            </button></a
+          >
+          <a href="capacitancia.html"
+            ><button type="button" class="btn btn-outline-primary">
+              capacitancia
+            </button></a
+          >
+          <a href=""
+            ><button type="button" class="btn btn-outline-success">
+              Otros
+            </button></a
+          >
         </div>
-        </div>
-    <!--Barra de navegacion-->
+      </div>
+      <!--Barra de navegacion-->
 
+      <div class="row">
+        <div class="col texto">
+          <h3>Resistencia</h3>
+          <p>
+            es una medida de la oposición al flujo de corriente en un circuito
+            eléctrico. Esta medida se mide en ohmios en honor a Georg Simón Ohm,
+            un físico alemán que estudio la relación entre voltaje, corriente y
+            resistencia, se le atribuye la formación de la ley de ohm.
+          </p>
+          <h3>Resistividad</h3>
+          <p>
+            describe el comportamiento de un material frente al paso de
+            corriente eléctrica, por lo que da una idea de lo buen o mal
+            conductor que es. Un valor alto de resistividad indica que el
+            material es mal conductor mientras que uno bajo indicará que es un
+            buen conductor. Es importante decir que la resistencia eléctrica se
+            deduce a partir de la resistividad eléctrica de un material, ya que
+            la resistencia es la propiedad de un objeto y la resistividad de un
+            material.
+          </p>
+        </div>
+      </div>
+
+      <div class="row contenido">
+        <div class="col-1"></div>
+        <div class="col-4">
+          <img
+            src="../img/resistencia.png"
+            alt="revisar codigo que algo puso mal"
+          />
+          <img src="../img/formula-resistencia.png" alt="" />
+        </div>
+        <div class="col-2"></div>
+        <div class="col-4">
+          <div class="col-1"></div>
+          <table class="formulario">
+            <tr>
+              <td>
+                <label for="unidades"><h2>Unidades de medida</h2></label>
+              </td>
+
+              <td>
+                <select name="" id="unidades">
+                  <option value="0"></option>
+                  <option value="1">dm / cm<sup>2</sup></option>
+                  <option value="2">metros</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="resistividad"
+                  ><h2>Resistividad(𝜌):</h2></label
+                >
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="resistividad"
+                />
+              </td>
+              <td><p class="separacionTablas" id="pegarUnidades1"></p></td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="longitud"
+                  ><h2>Longitud(L)</h2></label
+                >
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="longitud"
+                />
+              </td>
+              <td><p id="pegarUnidades2" class="separacionTablas"></p></td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="area"
+                  ><h2>Area trasversal(s):</h2></label
+                >
+              </td>
+              <td>
+                <input
+                  class="form-control separacionTablas"
+                  type="number"
+                  id="area"
+                />
+              </td>
+              <td><p id="pegarUnidades3" class="separacionTablas"></p></td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <button
+                  class="btn btn-outline-danger"
+                  style="margin-top: 3em"
+                  id="calcularCapacitancia"
+                >
+                  Calcular Resistencia
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="form-label separacionTablas" for="resistencia"
+                  ><h2>Resistencia =</h2></label
+                >
+              </td>
+              <td>
+                <p class="separacionTablas resultado" id="resistencia"></p>
+              </td>
+              <td><p id="pegarUnidades4" class="separacionTablas"></p></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="row" id="footer">
         <div class="row">
-            <div class="col texto">
-                <h3>Resistencia</h3><p> es una medida de la oposición al flujo de corriente en un circuito eléctrico. Esta medida se mide en ohmios en honor a Georg Simón Ohm, un físico alemán que estudio la relación entre voltaje, corriente  y resistencia, se le atribuye la formación de la ley de ohm.</p>
-                <h3>Resistividad</h3><p>describe el comportamiento de un material frente al paso de corriente eléctrica, por lo que da una idea de lo buen o mal conductor que es. Un valor alto de resistividad indica que el material es mal conductor mientras que uno bajo indicará que es un buen conductor. Es importante decir que la resistencia eléctrica se deduce a partir de la resistividad eléctrica de un material, ya que la resistencia es la propiedad de un objeto y la resistividad de un material. </p>
-            </div>
+          <h2>Autores:</h2>
         </div>
-
-        <div class="row contenido">
-            <div class="col-1"></div>
-            <div class="col-4">
-                <img src="../img/resistencia.png" alt="revisar codigo que algo puso mal">
-                <img src="../img/formula-resistencia.png" alt="">
-            </div>
-            <div class="col-2"></div>
-            <div class="col-4 ">
-            <div class="col-1"></div>
-                <table class="formulario">
-                    <tr>
-                        <td><label for="unidades"><h2>Unidades de medida</h2></label></td>
-
-                        <td><select name="" id="unidades">
-                            <option value="0"></option>
-                            <option value="1">dm / cm<sup>2</sup></option>   
-                            <option value="2">metros</option>
-
-                        </select></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="resistividad"><h2>Resistividad(𝜌):</h2></label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="resistividad"></td>
-                        <td><p class="separacionTablas" id="pegarUnidades1"></p></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="longitud"><h2>Longitud(L)</h2></label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="longitud"></td>
-                        <td><p id="pegarUnidades2" class="separacionTablas"></p></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="area"><h2>Area trasversal(s): </h2></label></td>
-                        <td><input class="form-control separacionTablas" type="number" id="area"></td>
-                        <td><p id="pegarUnidades3" class="separacionTablas"></p></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><button class="btn btn-outline-danger" style="margin-top: 3em;" id="calcularCapacitancia">Calcular Resistencia</button></td>
-                    </tr>
-                    <tr>
-                        <td><label class="form-label separacionTablas" for="resistencia"><h2>Resistencia =</h2></label></td>
-                        <td><p class="separacionTablas resultado" id="resistencia"></p></td>
-                        <td><p id="pegarUnidades4" class="separacionTablas"></p></td>
-                    </tr>
-                </table>
-            </div>
+        <div class="row">
+          <div class="col-3">
+            <p>Andres David Elizalde Peralta: 01220371068</p>
+          </div>
+          <div class="col">
+            <p>Santiago Alexander Opsina Pabon: 01220371058</p>
+          </div>
         </div>
+      </div>
 
-
-
-
-
-
+      
     </div>
     <!--Script propio-->
     <script src="../js/resistencia.js"></script>
 
     <!--Script bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
