--- a/html/capacitancia.html
+++ b/html/capacitancia.html
@@ -47,7 +47,7 @@
               Resistencia
             </button></a
           >
-          <a href=""
+          <a href="otros.html"
             ><button type="button" class="btn btn-outline-success">
               Otros
             </button></a
