--- a/html/leyOhm.html
+++ b/html/leyOhm.html
@@ -46,7 +46,7 @@
               Resistencia
             </button></a
           >
-          <a href=""
+          <a href="otros.html"
             ><button type="button" class="btn btn-outline-success">
               Otros
             </button></a
