--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="card-header tarejtaHead" id="tarjh4">OTRAS</div>
             <div class="card-body text-success">
               <img src="img/otras.png" class="tarjimg" />
-              <a href=""
+              <a href="html/otros.html"
                 ><button type="button" class="btn btn-outline-success">
                   Iniciar
                 </button></a
