--- a/html/capacitancia.html
+++ b/html/capacitancia.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>Capacitancia</title>
+    <title>CondensadorPlacasParalelas</title>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div class="col-8" id="tittle">
-          <h2>CALCULADORA CAPACITANCIA</h2>
+          <h2>Condensador De Placas Paralelas</h2>
         </div>
         <div class="col" id="accesos">
           <a href="leyOhm.html"
