--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             id="tarj2"
           >
             <div class="card-header tarejtaHead" id="tarjh2">
-              CONDENSADOR PLACAS PARALLEAS
+              CONDENSADOR PLACAS PARALELAS
             </div>
             <div class="card-body text-primary">
               <img src="img/capacitancia.png" class="tarjimg" />
